cleanup based on sa.
svn path=/fast-restartable-store/trunk/; revision=18051